--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@openzeppelin/contracts": "^4.9.3",
     "@types/chai": "^4.3.5",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
-    "ethers": "^5.7.2",
+    "ethers": "^5.8.0",
     "hardhat": "^2.21.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.0",
@@ -25,5 +24,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/contracts": "^4.9.3",
+    "@skalenetwork/ima-js": "^2.0.0",
+    "dotenv": "^16.4.7",
+    "web3": "^4.16.0"
+  }
 }
